Prevent infinite loops with some cases of recurring todos.

BUG:103761
BUG:129474


svn path=/branches/KDE/3.5/kdepim/; revision=599882